--- a/netflix-clone/src/Components/Header/Header.css
+++ b/netflix-clone/src/Components/Header/Header.css
@@ -6,7 +6,7 @@
     align-items: center;
     /* background-color: rgb(148, 132, 132);  */
     background-color: rgb(20, 20, 20);
-    /* background-color: transparent;  */
+     /* background-color: transparent;   */
     height: 10vh;
     color: white;
     transition: all 0.5s;
@@ -14,23 +14,30 @@
     z-index: 1;
     /* background-color: red;  */
 }
-.nav_black{
-   background-color: rgb(20, 20, 20);  
-} 
+
+ /* .header_left{
+   background-color: rgb(20, 20, 20);   
+} */
+
+
 .header-container{
     width: 90%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* background-color: yellow; */
+ 
 }
 .header_left ul{
   width: 140%;
   display: flex;
   justify-content: space-between;
   list-style-type: none;
-   color: white;
+ color: white;
   
+}
+.header_left ul li:hover{
+   cursor: pointer;
+   color: #888;
 }
  .header_right ul{
   width: 140%;
@@ -38,5 +45,5 @@
   justify-content: space-between;
   list-style-type: none;
    color: white;
-  
+
  }
